<resources>
    <string name="app_name">Hotels!</string>
    <string name="button_addHotel">Add Hotel</string>
    <string name="hint_hotelName">Hotel Name</string>
    <string name="hint_hotelDescription">Description </string>
    <string name="hint_hotelStreet">Street + Number </string>
    <string name="hint_hotelCity">City </string>
    <string name="hint_hotelState">State/ Province </string>
    <string name="hint_hotelCountry">Country </string>
    <string name="hint_hotelPhone">Phone </string>
    <string name="hint_hotelEmail">Email </string>
    <string name="placeholder_hotelCoordinates">Set location to set Latitude, Longitude </string>
    <string name="menu_addHotels">Add</string>
    <string name="menu_openHotelsMap">Open Map</string>
    <string name="menu_openAccount">Open Account</string>
    <string name="menu_cancelHotels">Cancel</string>
    <string name="enter_hotel_name"> Please enter the Hotel Name </string>
    <string name="save_hotel"> Save Hotel </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_hotel_image">Select image</string>
    <string name="change_hotel_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_add_hotel">Add Hotel</string>
    <string name="title_activity_hotels_maps">All Hotels </string>
    <string name="title_activity_account">Account</string>
    <string name="menu_deleteHotel">Delete</string>
    <string name="menu_saveHotel">Save</string>
    <string name="map_select_hotel">Select Hotel </string>
    <string name="search_fragment">Search</string>
    <string name="accountText">Hi friend, these are your account details</string>
    <string name="hint_accountFirstName">Enter your first name</string>
    <string name="hint_accountLastName">Enter your last name</string>
    <string name="hint_accountEmail">Enter your email address</string>
    <string name="hint_accountPhone">Enter your phone number</string>
    <string name="hint_accountDateOfBirth">What is your date of birth?</string>
    <string name="enter_user_lastName">Please enter your last name</string>
    <string name="enter_user_firstName">Please enter your first name</string>
    <string name="enter_user_email">Please enter your email</string>
    <string name="enter_user_phone">Please enter your phone number</string>
    <string name="enter_user_dateOfBirth">Please enter your date of birth</string>
    <string name="enter_hotel_coordinates">Please set a location</string>
    <string name="menu_viewGallery">View Gallery</string>
</resources>