<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/hotel_add"
        android:icon="@drawable/baseline_domain_add_24"
        android:title="@string/menu_addHotels"
        app:showAsAction="always"/>

    <item
        android:id="@+id/hotel_map"
        android:icon="@drawable/map_foreground"
        android:title="@string/menu_openHotelsMap"
        app:showAsAction="always"/>

    <item
        android:id="@+id/view_gallery"
        android:icon="@drawable/baseline_photo_library_24"
        android:title="@string/menu_viewGallery"
        app:showAsAction="always"/>

    <item
        android:id="@+id/account"
        android:icon="@drawable/baseline_manage_accounts_24"
        android:title="@string/menu_openAccount"
        app:showAsAction="always"/>
</menu>