<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hotels.views.hotels.HotelView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/hotelName"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelName"
            android:inputType="textCapSentences|textAutoCorrect"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/hotelDescription"
            android:layout_width="375dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/hint_hotelDescription"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
            android:singleLine="false"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/hotelStreet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/hotelStreet"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelStreet"
            android:inputType="textCapSentences|textAutoCorrect"
            android:singleLine="true"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelDescription" />

        <EditText
            android:id="@+id/hotelCity"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelCity"
            android:inputType="textCapSentences|textAutoCorrect"
            android:singleLine="true"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelStreet" />

        <EditText
            android:id="@+id/hotelState"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelState"
            android:inputType="textCapSentences|textAutoCorrect"
            android:singleLine="true"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelCity" />

        <EditText
            android:id="@+id/hotelCountry"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelCountry"
            android:inputType="textCapSentences|textAutoCorrect"
            android:singleLine="true"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelState" />

        <EditText
            android:id="@+id/hotelEmail"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelEmail"
            android:inputType="textEmailAddress"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelCountry" />

        <EditText
            android:id="@+id/hotelPhone"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/hint_hotelPhone"
            android:inputType="phone"
            android:singleLine="true"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelEmail" />

        <TextView
            android:id="@+id/hotelCoordinates"
            android:layout_width="375dp"
            android:layout_height="15dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/placeholder_hotelCoordinates"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addHotelImage" />

        <Button
            android:id="@+id/addHotelImage"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/button_addImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelPhone"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/hotelLocation"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/button_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toEndOf="@+id/addHotelImage"
            app:layout_constraintTop_toBottomOf="@+id/hotelPhone"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/hotelImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hotelMapView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelCoordinates"
            app:layout_constraintVertical_bias="0.521"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/hotelMapView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hotelImage"
            app:layout_constraintTop_toBottomOf="@+id/hotelCoordinates" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>